# rust-web

./: Cargo.toml  README.md
config/: log4rs.yaml
db/: user.sql
src/: api.rs  auth.rs  constant.rs  errors.rs  main.rs  middleware.rs  parse.rs  response.rs  route.rs  server.rs  types.rs
src/dao/: mod.rs  user.rs
src/database/: db.rs  mod.rs
src/database/db/: point.sql  user.sql
src/handlers/: api.rs  mod.rs  user.rs
src/http/: mod.rs  user.rs
src/model/: mod.rs  user.rs
src/models/: mod.rs  user.rs
src/service/: mod.rs  user.rs
src/services/: mod.rs  user.rs
