[package]
name = "actixx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0"
actix-http = "3.0"
actix-cors = "0.6"
anyhow = "1.0"
thiserror = "1.0"
sqlx = { version = "0.6", features = [ "runtime-actix-native-tls" , "mysql" ] }
jsonwebtoken = "8.0"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
actix-web-httpauth = "0.8.0"
log = "0.4"
log4rs = "0.10.0"